[metadata]
name = pystream_wushilin
version = 1.0.2
author = wushilin
author_email = wushilin.sg@gmail.com
description = A python stream utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wushilin/pystream
project_urls =
    Bug Tracker = https://github.com/wushilin/pystream/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
